# soft-seg

./: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  MIGRATION_COMPLETE.md  README.md  REFACTORING_GUIDE.md  REFACTORING_LOG.md  SOFT_LABEL_IMPLEMENTATION.md  TRAINING_GUIDE.md  TRAINING_GUIDE.txt  pyproject.toml  test_core_models.py  test_models.py  test_xca_intensity.py
configs/: octa500_3m_diffusion_models.yaml  octa500_3m_supervised_models.yaml  octa500_6m_diffusion_models.yaml  octa500_6m_supervised_models.yaml  rossa_diffusion_models.yaml  rossa_supervised_models.yaml  xca_diffusion_models.yaml  xca_supervised_models.yaml
docs/: DSCNET_IMPLEMENTATION.md  NETWORK_VERIFICATION_COMPLETE.md  VERIFICATION_SUMMARY.md  loss_recommendations.md  pcgrad_integration.md
experiments/: experiments.json
script/: evaluate_diffusion_octa_3m.sh  evaluate_diffusion_octa_6m.sh  evaluate_diffusion_xca.py  evaluate_diffusion_xca.sh  evaluate_supervised_xca.py  evaluate_supervised_xca.sh  test_soft_labels.sh  train_base.py  train_diffusion_models.py  train_diffusion_octa_3m.sh  train_diffusion_octa_6m.sh  train_diffusion_rossa.sh  train_diffusion_xca.sh  train_maskdiff_v2_xca.sh  train_supervised_models.py  train_supervised_octa_3m.sh  train_supervised_rossa.sh  train_supervised_xca.sh
scripts/: analyze_current_training.py  analyze_flow_training.py  analyze_grad_conflict.py  backup_best_checkpoints.sh  check_gradient_conflict.py  check_multitask_channels.py  check_soft2hard_main.py  eval.sh  eval_octa500_3m.sh  eval_octa500_6m.sh  eval_rossa.sh  eval_xca.sh  eval_xca_soft_labels.sh  train.py  (+17 more)
(+800 files in other folders)
